force-app/main/default/objects/Commission_Line__c/Commission_Line__c.object-meta.xml
<CustomObject>
    <description>One record per row from the carrier file. Stores amounts, keys, and matching links to Agent/Policy/Member.(Detail in a Master-Detail to Commission Statement.)</description>
    <label>Commission Line</label>
    <nameField>
        <displayFormat>CL-{YYYYMM}-{00000}</displayFormat>
        <label>Commission Line #</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commission Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>