force-app/main/default/objects/Commission_Line__c/fields/Commission_Rate__c.field-meta.xml
<CustomField>
    <fullName>Commission_Rate__c</fullName>
    <description>Commission rate pulled from the related Insurance policy (Policy Number).</description>
    <formula>Policy_Number__r.Commission_Rate__c</formula>
    <inlineHelpText>Commission rate from the linked insurance policy. System-generated, read-only.</inlineHelpText>
    <label>Commission Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>