force-app/main/default/objects/Commission_Line__c/fields/Payment_Period__c.field-meta.xml
<CustomField>
    <fullName>Payment_Period__c</fullName>
    <description>Payment period from the parent Commission Statement.</description>
    <formula>Commission_Statement__r.Payment_Period__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Derived from the related Commission Statement in YYYY-MM format.</inlineHelpText>
    <label>Payment Period</label>
    <type>Text</type>
</CustomField>